# Open-Altergo

./: .gitattributes  .gitignore  LICENSE  README.md  RESEARCH_LOG.md  app.py  modal_app.py  requirements-core.txt  requirements-gradio.txt  requirements-http.txt  requirements.txt  train_personal.py
apis/: __init__.py
apps/: __init__.py
cloud/: __init__.py
cloud/engine/: README.md  pyproject.toml
cloud/engine/src/: __init__.py  lightning.py  model_assets.py  model_manifest.json  pipeline.py
cloud/engine/src/datamodule/: av_dataset.py
cloud/engine/src/espnet/nets/: beam_search.py  ctc_prefix_score.py
cloud/engine/src/espnet/nets/pytorch_backend/: ctc.py
cloud/engine/src/espnet/nets/pytorch_backend/decoder/: transformer_decoder.py
cloud/engine/src/espnet/nets/pytorch_backend/transformer/: add_sos_eos.py
cloud/engine/src/espnet/nets/scorers/: length_bonus.py
cloud/engine/src/open_altergo_engine/: local_infer.py
cloud/engine/src/open_altergo_engine/datamodule/: data_module.py  transforms.py
cloud/engine/src/open_altergo_engine/espnet/nets/: batch_beam_search.py
cloud/engine/src/open_altergo_engine/espnet/nets/pytorch_backend/: e2e_asr_conformer.py
cloud/engine/src/open_altergo_engine/espnet/nets/pytorch_backend/encoder/: conformer_encoder.py
cloud/engine/src/open_altergo_engine/espnet/nets/scorers/: ctc.py
cloud/engine/src/open_altergo_engine/preparation/: preprocess_lrs2lrs3.py  transforms.py
cloud/engine/src/open_altergo_engine/preparation/detectors/retinaface/: detector.py
cloud/engine/src/preparation/: asr_infer.py  preprocess_vox2.py  utils.py
docs/: RESEARCH_LOG.md  Silent-Lip-Reader-README.md  (+6 more)
(+82 files in other folders)
